Lime r29 [2018.7.21.]
- Removed mp3 resources, and converted to ogg/vorbis.
- [for developer only] I've added Korean comment to some files.


Lime r28 [2018.7.20.]
- Minor bugs fix


Lime r27 [2018.7.19.]
- Fixed bug: the skill book list doesn't appear correctly.
- Add help for profile commands.
- Add: toggle on/off spell ID on tooltip.


Lime r26 [2018.7.19.]
- Remove Debug code


Lime r25 [2018.7.19.]
- You can register an Spelltimer with the Spell name. This consumes significant CPU resources.
- Minor bug fixed.


Lime r24 [2018.7.19.]
- CPU usage has been reduced by about 10%.
- Updates LibAura.


Lime r23 [2018.7.14.]
- Support the Battle for Azeroth Pre-Patch.


Lime r22 [2018.7.12.]
- fixed to missing string.


Lime r21 [2018.7.8.]
- Update locale files.
- Highlight some dangerous functions in red color.


Lime r20 [2018.7.8.]
- Support BfA 8.0.1.27026 client.
- Change the default language to English.
- With the frames locked, you can drag the raid frames using the ALT key.
- Updates locale file for Traditional Chinese (zhTW).
- Change the global timer for test purpose.


Lime 18 [2018.6.15.]
- Minor fixed: warlock spell

Lime 17 [2018.6.15.]
- Supports Traditional Chinese. Thank you for your translation, gaspy10.


Lime 16 [2018.6.13.]
- Fixed some bugs.
- Updated survival skills, spell timer, etc.


Lime 15 [2018.6.8.]
- Support BfA 8.0.1.26788 client.
- Adds the mage's cursed spell to the database.
- Adds a group buff. (Mage, Priest, Warrior)
- Modify the list of survival skill.
- Change the global timer from 0.5 seconds to 1.0 seconds.
- The aura function is slightly optimized.
- The spell timer should now only be entered as an spell ID. Spell timers are no longer available for spell names.
- Changed the API for UnitAura, UnitBuff, and UnitDebuff. Inevitably, the parts that can not be fixed with the API use a compatible library.
- Remove unusual scripts.
- Remove any incompatible parts from BfA
- Remove some drop-down menus.
- Fix other errors.

